Update 3.3 Bug fix, made the code more readable

--- a/src/components/Header/TheHeader.css
+++ b/src/components/Header/TheHeader.css
@@ -2,6 +2,7 @@ header {
     position: fixed;
     width: 100vw;
     height: 58px;
+    top: 0;
     background-color: #40BA21;
     box-shadow: 0 2px 10px 0 rgba(30, 30, 30, 0.25);
     z-index: 100;
