--- a/src/components/take_photo/take_photo.css
+++ b/src/components/take_photo/take_photo.css
@@ -1,4 +1,3 @@
-
 .camera {
     display: flex;
     justify-content: center;
@@ -59,4 +58,9 @@
     width: 244px;
     /*left: 70px;*/
     left: calc(50% - 122px);
+}
+
+.button_close{
+    position: absolute;
+    bottom: 100px;
 }
